--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
+    "mathjs": "^15.0.0",
     "next": "15.5.4",
     "next-cloudinary": "^6.16.0",
     "nodemailer": "^7.0.9",
