--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
     "mathjs": "^15.0.0",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "next-cloudinary": "^6.16.0",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
